# dominion-app

./: .gitignore  README.md  RandomChars.py  characters.csv
beeware-app/beeware-venv/: pip-selfcheck.json  pyvenv.cfg
beeware-app/dominionapp/: LICENSE  README.rst  pyproject.toml
beeware-app/dominionapp/src/dominionapp/: __main__.py  app.py
beeware-app/dominionapp/src/dominionapp.dist-info/: METADATA
beeware-app/dominionapp/src/dominionapp/resources/: cards.csv
images/: README.md
